# ai-search-fastapi-qdrant-chatgpt

./: .env-example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
data/processed/Marcus_Aurelius_Antoninus_-_His_Meditations_concerning_himselfe/: Marcus_Aurelius_Antoninus_-_His_Meditations_concerning_himselfe.json
data/unzipped/Marcus_Aurelius_Antoninus_-_His_Meditations_concerning_himselfe/: index.html  metadata.opf  style.css
notebooks/: extract_text.ipynb  vectorize_text.ipynb
